<resources>
    <string name="app_name">Task List</string>
    <string name="create_button">Create</string>
    <string name="delete_button">Delete</string>
    <string name="save_task_button">Save</string>
    <string name="input_stage_name_title">Please enter stage</string>
    <string name="create_stage_button">Create stage</string>
    <string name="back_button">Back</string>
    <string name="start_date_button">Begin date</string>
    <string name="end_date_button">End date</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="stage_done_button">Stage done</string>
    <string name="task_title">Task title:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="stages_done">Stages done:</string>
    <string name="stage_description">Stage description:</string>
    <string name="database_error">Database error. Try again.</string>
    <string name="empty_stage">Please create one stage</string>
    <string name="empty_start_date">Please select begin date</string>
    <string name="empty_end_date">Please select end date</string>
    <string name="empty_task_name">Please input task name</string>
    <string name="empty_stage_name">Please input stage name</string>
    <string name="date_parse_error">Date parse error. Please try again.</string>
    <string name="no_tasks">You don\'t have any tasks. Let\'s create one.</string>
</resources>
