<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user1.testtaskmanager.MainActivity"
    android:background="@color/colorBackgroundActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/tv_task_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkText"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/task_title"
            android:fontFamily="sans-serif-light"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_task_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkText"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>
        </ScrollView>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:padding="16dp">
        <TableRow
            android:minHeight="40dp">
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_start_date_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date" />
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_start_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:minHeight="40dp">
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_end_date_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date" />
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_end_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:minHeight="40dp">
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_stage_done_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stages_done" />
            <TextView
                style="@style/ViewTaskInfoText"
                android:id="@+id/tv_stages_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_stage_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStageDone"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorButtonCreate"
        android:text="@string/stage_done_button"
        android:textColor="@color/colorWhiteText"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_stage_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkText"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/stage_description"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="4dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_stages_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkText"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:layout_weight="1"
            android:background="@color/colorButtonBack"
            android:textColor="@color/colorWhiteText"
            android:textSize="10pt"
            android:onClick="onClickBackFromViewTask"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:layout_weight="1"
            android:background="@color/colorButtonDelete"
            android:textColor="@color/colorWhiteText"
            android:textSize="10pt"
            android:onClick="onClickDeleteSingleTask"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>
</LinearLayout>

