<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundMainActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/tv_no_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks"
            android:textColor="@color/colorDarkText"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_delete_multiple_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:layout_weight="1"
            android:background="@color/colorButtonDelete"
            android:textColor="@color/colorWhiteText"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:onClick="onClickDeleteMultipleTask"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button"
            android:layout_weight="1"
            android:background="@color/colorButtonCreate"
            android:textColor="@color/colorWhiteText"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:onClick="onClickCreateTask"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>




</LinearLayout>
